<resources>
    <string name="app_name">Prabandhah</string>
    <string name="welcome_to_prabandhah">Welcome to Prabandhah!</string>
    <string name="email">Email</string>
    <string name="sign_up"><u>Sign up!</u></string>
    <string name="password">Password</string>
    <string name="are_you_new_user">Are you new user</string>
    <string name="forget_password">Forget password?</string>
    <string name="next">Next</string>
    <string name="str_username">User name</string>
    <string name="str_password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New user? </string>

</resources>
