<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mihir.prabandhah.Login_Activity"
    android:background="@drawable/login_img"
    android:orientation="vertical">


<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/_15sdp"
    android:layout_marginRight="@dimen/_15sdp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_prabandhah"
        android:layout_marginTop="@dimen/_100sdp"
        android:gravity="center"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_20sdp"
        android:textColor="#fff"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_10sdp"

        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"


        app:counterOverflowTextAppearance="@style/CounterOverFlow"
        app:counterTextAppearance="@style/CounterText"
        app:hintTextAppearance="@style/HintText"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorwhite">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorwhite"
            android:hint="Password Visibility Toggle Tint"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>
    <EditText
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:background="@drawable/edit_txt_bubble"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/_5sdp" />
    <com.subhrajyoti.passwordview.PasswordView
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_5sdp"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:background="@drawable/edit_txt_bubble"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/forget_password"
        android:paddingRight="@dimen/_20sdp"
        android:textColor="#FFF" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="@dimen/_20sdp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/are_you_new_user"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_19sdp"
            android:layout_weight="4"
            android:gravity="right"
            android:text="@string/sign_up"
            android:textColor="#46FBFC" />


    </LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="@dimen/_85sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_19sdp"
        android:layout_marginLeft="@dimen/_185sdp"
        android:text="@string/next"
        android:background="@drawable/rac_btn"
        android:textSize="@dimen/_17sdp" />
</LinearLayout>

</LinearLayout>
